# clv-long-term-optimization

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: business.yaml  evaluation.yaml  modeling.yaml  project.yaml
docs/: Mathintuition_datascienceframing.md  architecture_overview.md  business_impact_and_roi.md  business_problem.md  data_quality_rules.md  deployment_plan.md  evaluation_strategy.md  feature_engineering.md  model_card.md  modeling_assumptions.md
notebooks/: 01_exploratory_data_understanding.ipynb  02_data_quality_and_cleaning_validation.ipynb  03_feature_engineering.ipynb  04_model_evaluation_and_interpretation.ipynb
reports/tables/: churn_feature_importance.csv  churn_model_comparison.csv  clv_decile_lift.csv  cohort_retention.csv  cohort_revenue.csv  executive_summary.csv  pareto_summary.csv  policy_roi_curve.csv  segment_summary.csv  sensitivity_summary.csv  sensitivity_tornado.csv
src/analysis/: business_insights.py  cohort_analysis.py  customer_segmentation.py
src/cleaning/: clean_transactions.py
src/evaluation/: backtesting.py  sensitivity_analysis.py
src/features/: build_features.py
src/ingestion/: load_data.py
src/modeling/: train_churn_risk.py  train_clv_models.py
src/optimization/: budget_allocator.py
src/pipelines/: weekly_scoring_pipeline.py
src/utils/: config_loader.py  helpers.py
tests/: test_cleaning.py  test_features.py  test_models.py
